fix footer spacing issue

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -137,6 +137,6 @@ text-align: center;
 .image-footer{
   position: relative;
   height:50px;
-  top: 225px;
+  top: 160px;
   background-image: url('https://s.gr-assets.com/assets/layout/bookrow.jpg');
 }
